fix: spacing issue on chrome

--- a/src/styles/PokeBall.css
+++ b/src/styles/PokeBall.css
@@ -34,14 +34,12 @@
   color: white;
   grid-area: 1 / 1 / 3 / 5;
   background-color: var(--main-color);
-  height: 150px;
   width: 100%;
 }
 
 .poke-ball-bottom {
   grid-area: 3 / 1 / 5 / 5;
   background-color: white;
-  height: 150px;
   width: 100%;
 }
 
